<resources>
    <string name="app_name">Sustainability Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="fragment_tasks_label">Tasks</string>
    <string name="fragment_statistics_label">Statistics</string>
    <string name="fragment_create_task_label">Create Task</string>
    <string name="fragment_create_predefined_task_label">Create Predefined Task</string>

    <string name="fab_new_task_label">New Task</string>
    <string name="fab_new_goal_label">New Goal</string>

    <string name="task_type_predefined_title">Predefined Task</string>
    <string name="task_type_predefined_desc">Choose from a predefined selection of tasks with set metrics and categories.</string>
    <string name="task_type_custom_title">Custom Task</string>
    <string name="task_type_custom_desc">Create your own tasks with custom details to track your impact.</string>

    <string name="task_category_co2">CO₂</string>
    <string name="task_category_co2_unit">kg CO₂</string>
    <string name="task_category_water">Water</string>
    <string name="task_category_water_unit">liters</string>
    <string name="task_category_waste">Waste</string>
    <string name="task_category_waste_unit">kg</string>

    <string name="task_data_km">Distance (km)</string>
    <string name="task_data_item_no">Number of Items</string>
    <string name="task_data_shower_duration">Shower Duration (minutes)</string>

    <string name="task_create_name">Task Name</string>
    <string name="task_create_name_help">Task Variant Name</string>
    <string name="task_create_saving_type">Saving Type</string>
    <string name="task_create_savings">Saving Amount</string>
    <string name="task_create">Create Task</string>
    <string name="task_edit">Edit Task</string>
    <string name="task_delete">Delete Task</string>
    <string name="task_delete_desc">Are you sure you want to delete this Task?\nThis will delete all completions for this task.\n\nThis action is irreversible!</string>

    <string name="task_display_savings">Total Saved: %1$.1f %2$s</string>
    <string name="task_display_completions">Completions: %1$d</string>

    <string name="statistics_savings">%1$.1f %2$s</string>
    <string name="statistics_display_task_name_label">Task:</string>
    <string name="statistics_display_savings">Saved %1$.1f %2$s</string>

    <string name="goal_create">Create Goal</string>
    <string name="goal_dialog_category_label">Goal Category</string>
    <string name="goal_dialog_periodicity_label">Goal Period</string>
    <string name="goal_dialog_name_help">Goal Name</string>
    <string name="goal_dialog_value_help">Target Value</string>
    <string name="goal_delete">Delete Goal</string>
    <string name="goal_delete_desc">Are you sure you want to delete this Goal?\n\nThis action is irreversible!</string>
    <string name="goal_edit">Edit Goal</string>
    <string name="goal_progress">Achieved: %1$.1f / %2$.1f %3$s</string>
    <string name="goal_target">Target: %1$.1f %2$s / %3$s</string>

    <string name="toast_task_created">Task created!</string>
    <string name="toast_task_updated">Task updated!</string>
    <string name="toast_task_deleted">Task deleted!</string>
    <string name="toast_task_completed">Task completed!</string>
    <string name="toast_goal_created">Goal created!</string>
    <string name="toast_goal_updated">Goal updated!</string>
    <string name="toast_goal_deleted">Goal deleted!</string>

    <string name="general_cancel">Cancel</string>
    <string name="general_value">Value</string>
    <string name="general_required">Value required!</string>
    <string name="general_category_required">A category needs to be specified!</string>
    <string name="general_periodicity_required">A periodicity needs to be specified!</string>
    <string name="general_invalid_number">Invalid value!</string>
    <string name="general_year">Year</string>
    <string name="general_month">Month</string>
    <string name="general_week">Week</string>
    <string name="general_previous_period">Previous Period</string>
    <string name="general_next_period">Next Period</string>
</resources>