<com.google.android.material.textfield.TextInputLayout style="@style/TextInputBox.Padding"
    android:id="@+id/input_container"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true" />
</com.google.android.material.textfield.TextInputLayout>